# voxel-aware-loss

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/weighted_l1_loss/: __init__.py  loss.py
tests/: test_loss.py
